# watchtop

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/scanner/: InotifyParser.cpp  InotifyParser.h  LeakDetector.cpp  LeakDetector.h  PortScanner.cpp  PortScanner.h  ProcScanner.cpp  ProcScanner.h  WatchCollector.cpp  WatchCollector.h
src/system/: SystemLimits.cpp  SystemLimits.h
src/ui/: CommandPanel.cpp  CommandPanel.h  Dashboard.cpp  Dashboard.h  HistoryTracker.cpp  HistoryTracker.h  ProcessTable.cpp  ProcessTable.h  WatchDetails.cpp  WatchDetails.h
